--- a/personal-budget-manager/package.json
+++ b/personal-budget-manager/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Ardinenukuri.github.io/personal-budget-managerapp",
+  "homepage": "https://ardinenukuri.github.io/personal-budget-managerapp",
   "name": "personal-budget-manager",
   "version": "0.1.0",
   "private": true,
